Fix iPhone layout issues: Add footer and improve responsive design

--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -3,12 +3,15 @@ ion-menu-button {
 }
 
 #container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-height: calc(100vh - 140px); // Account for header and footer space
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 #container strong {
@@ -25,4 +28,17 @@ ion-menu-button {
 
 #container a {
   text-decoration: none;
+}
+
+// Footer styling
+ion-footer {
+  ion-toolbar {
+    --background: var(--ion-color-light);
+    --color: var(--ion-color-dark);
+  }
+
+  ion-title {
+    font-size: 12px;
+    text-align: center;
+  }
 }
